# CASINO-parser

./: .gitignore  CMakeLists.txt  README.md
examples/: casino_parser.cpp  main.cpp
include/: histogram.hpp  io.hpp
python/: plot.py
src/: histogram.cpp  io.cpp  trajectoryParser.cpp
